# mrv2

./: .clang-format  .dockerignore  .emacs  .gitattributes  .gitconfig  .gitignore  .gitmodules  App.cpp  App.h  BUILD.md  CMakeLists.txt  COMPILING.txt  DEVELOPMENT.md  Dockerfile  Dockerfile.latest  Doxyfile  FOR_MANOLO.md  HISTORY.md  LICENSE  LICENSE.md  MISSING.md  README.html  README.md  README.txt  SPONSORS.md  build_dir.sh  build_end.sh  cmake.sh  color.mrv2s  copy_dlls.sh  copy_ffmpeg.sh  docker.sh  ffmpeg_win64_quick.yml  ffmpeg_windows.sh  ffmpeg_windows_gpl.sh  github_release.sh  qt5_runme.sh  qt6_runme.sh  qt_end.sh  qt_runme.sh  (+19 more)
lib/mrvFlApp/: CMakeLists.txt
lib/mrvFlGL/: CMakeLists.txt  mrvTimelineViewport.cpp
mrViewer/: CMakeLists.txt
mrViewer/etc/Linux/: mrViewer.desktop.in  mrViewer2.desktop.in  postinst.in  postrm.in  uninstall.sh.in
mrViewer/etc/macOS/: README.txt  mrViewer.icns  startup.sh.in
mrViewer/icons/: icons.c  merge_tool.xpm  move_pic.xpm  redo.xpm  reel_delete.xpm  reel_delete_36.xpm  reel_new_36.xpm  undo.xpm
mrViewer/lib/: CMakeLists.txt
mrViewer/lib/mrvApp/: App.cpp  App.h  CMakeLists.txt  mrvDevicesModel.cpp  mrvDevicesModel.h  mrvFilesModel.cpp  mrvFilesModel.h  mrvOpenSeparateAudioDialog.cpp  mrvOpenSeparateAudioDialog.h  mrvSettingsObject.cpp  mrvSettingsObject.h
mrViewer/lib/mrvCore/: CMakeLists.txt  Polyline2D.h  Shape.h  cputable.h  mrvCPU.cpp  mrvCPU.h  mrvColor.h  mrvColorSpaces.cpp  mrvColorSpaces.h  mrvHome.cpp  mrvHome.h  mrvHotkey.cpp  mrvHotkey.h  mrvI8N.h  mrvLineSegment.h  mrvMath.h  mrvMedia.cpp  mrvOS.cpp  mrvOS.h  mrvPreferences.cpp  mrvRoot.cpp  mrvRoot.h  mrvSequence.cpp  mrvSequence.h  mrvShape.h  mrvString.h  mrvTimeObject.cpp  (+3 more)
mrViewer/src/: App.cpp  CMakeLists.txt  appicon.rc  main.cpp
mrv2/: App.cpp  App.h  CMakeLists.txt  main.cpp
mrv2/ComfyUI/: INSTALL.md
mrv2/colors/: mrv2.colors
mrv2/docs/: HISTORY.md  README.md  TODO.md  VIDEOS.md
mrv2/icons/: arrow.xpm  circle.xpm  color_ctls.xpm  draw.xpm  erase.xpm  file_clone_24.xpm  file_open_24.xpm  icons.c  icons.c.backup  move_pic.xpm  reel.xpm  reel_new.xpm  reel_new_24.xpm  reel_save_24.xpm  reel_save_36.xpm  scissors.xpm  scrub.xpm  select.xpm  settings.xpm  viewer16.xpm
mrv2/lib/: CMakeLists.txt
mrv2/po/: de.po  en.po  es.po  fr.po  hi_IN.po  it.po  messages.pot  pt.po  zh-CN.po  zh.po
mrv2/presets/: README.md  av1-worst.pst  av1_cinematic.pst  av1_good.pst  av1_worst.pst  h264-animation.pst  h264-cinematic.pst  h264-good.pst  h264-placebo.pst  hap-hapq.pst  none-worst.pst  prores_4444-good.pst  prores_xq-good.pst  vp9-cinematic.pst  vp9-good.pst  vp9_good.pst  vp9_lossless.pst  vp9_worst.pst  x264_animation.pst  x264_good.pst
mrv2/python/: upgrade-mrv2.py
mrv2/shaders/: latLong.glsl
mrv2/src/: CMakeLists.txt  appicon.rc  main.cpp
mrvCore/: CMakeLists.txt  mrvColorSchemes.cpp  mrvColorSpaces.cpp  mrvHome.cpp  mrvHotkey.h  mrvInteger.h  mrvMath.h  mrvMedia.cpp  mrvMedia.h  mrvPreferences.h  mrvSSE.h  mrvSequence.cpp  mrvSequence.h  mrvString.cpp  mrvTimeObject.cpp  mrvUtil.h
mrvFl/: CMakeLists.txt  mrvActionWindow.cpp  mrvActionWindow.h  mrvAsk.cpp  mrvAsk.h  mrvChoice.cpp  mrvFileRequester.h  mrvHotkey.cpp  mrvHotkey.h  mrvMainWindow.cpp  mrvPack.h  mrvPopupMenu.cpp  mrvSlider.h  mrvTimecode.cpp  mrvTimecode.h  mrvTimeline.cpp  mrvTimelinePlayer.cpp  mrvTimelinePlayer.h  mrvTree.cpp  mrvTree.h  mrvVolumeSlider.cpp  mrvVolumeSlider.h  namespace.h  resource.h
mrvFl/FLU/: Flu_Button.h  Flu_Combo_Box.cpp  Flu_Combo_Box.h  Flu_Combo_List.h  Flu_Combo_Tree.cpp  Flu_File_Chooser.h  Flu_Return_Button.cpp  Flu_Separator.h  Flu_Wrap_Group.cpp  Flu_Wrap_Group.h  flu_file_chooser_pixmaps.cpp  flu_pixmaps.h
mrvFlGL/: CMakeLists.txt  mrvGLViewport.cpp  mrvTimelineViewportInline.h
src/: CMakeLists.txt
src/colors/: mrv2.colors
src/docs/: ChangeLog.md  HISTORY.md
src/hdr/: CMakeLists.txt  app.rc  main.cpp  mrvContextObject.cpp  mrvContextObject.h  mrvDesktop.cpp  mrvDesktop.h  mrvFile.cpp  mrvHDRApp.cpp  mrvHDRApp.h  mrvHDRView.fl  mrvHome.cpp  mrvHome.h  mrvIO.cpp  mrvLanguages.cpp  mrvOS.cpp  mrvRoot.cpp  mrvString.h
src/icons/: viewer16.xpm
src/launcher/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/license_helper/: CMakeLists.txt  main.cpp  main.mm  mrvFile.cpp  mrvFile.h  mrvHome.cpp  mrvHome.h  mrvI8N.h  mrvIO.cpp  mrvIO.h  mrvLanguages.cpp  mrvLanguages.h  mrvMainWindow.cpp  mrvMainWindow.h  mrvOS.cpp  mrvOS.h  mrvRoot.cpp  mrvRoot.h  mrvString.cpp  mrvString.h
src/main/: CMakeLists.txt  main.cpp
src/po/: de.po  en.po  es.po  fr.po  hi_IN.po  it.po  ja.po  messages.pot  pt.po  ru.po  zh-CN.po
src/presets/: av1-cinematic.pst  av1-good.pst  av1-worst.pst  av1_aom-cinematic.pst  av1_aom-good.pst  av1_aom-worst.pst  dnxhr_444-good.pst  dnxhr_hq-good.pst  dnxhr_hqx-good.pst  dnxhr_lb-good.pst  dnxhr_sq-good.pst  h264-animation.pst  h264-cinematic.pst  h264-good.pst  h264-placebo.pst  hap-alpha-snappy.pst  hap-alpha.pst  hap-hapq.pst  hap-snappy.pst  none-good.pst  none-worst.pst  prores-good.pst  prores_4444-good.pst  prores_hq-good.pst  prores_proxy-good.pst  vp9-cinematic.pst  vp9-good.pst  vp9-lossless.pst  vp9-worst.pst
src/tests/: CMakeLists.txt
src/usdviewer/: CMakeLists.txt  USDCollectTextures.cpp  USDCollectTextures.h  USDEnginePrimitive.h  USDGetMaterials.cpp  USDGetMaterials.h  USDMaterial.h  USDMeshOptimization.h  USDProcessSkeletonRoot.h  USDRender.cpp  USDRender.h  USDRenderEngine.cpp  USDRenderEngine.h  USDRenderEnginePrivate.h  USDRenderOptions.h  USDRenderPrims.cpp  USDRenderPrivate.h  USDRenderShaders.cpp  USDRenderShadersBinary.h  USDRenderStructs.h  USDRenderVulkan.cpp  USDResolveTexture.cpp  USDSceneTraversal.cpp  USDTextureSlots.h  USDTransparentPrimitive.h  VAOPool.h  main.cpp
tlRender/: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  gl_runme_minimal.sh
tlRender/etc/: CMakeLists.txt
tlRender/examples/: CMakeLists.txt
tlRender/info_txt/: AUDIO_SAVING.txt  NET_TEST.txt  VERIFY.txt
tlRender/lib/: CMakeLists.txt
tlRender/tests/: CMakeLists.txt
(+4128 files in other folders)
